# hf-lennard-workflow

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SYSTEM_DATAFLOW_DIAGRAM.md  TODO_dossier_storage.md  TODO_store_letter_in_zoho_notes.md  company_dossier.md  docker-compose.dev.yml  docker-compose.yml  mailing_address.json  person_dossier.md  todo.txt
.claude/agents/: code-architect-reviewer.md
contracts/: zoho-tasks-dynamic.json
crates/dossier-grpc-client/: Cargo.toml  build.rs  dossier_service.proto
crates/dossier-grpc-client/src/: lib.rs
crates/letter-grpc-client/: Cargo.toml  build.rs
crates/letter-grpc-client/src/: lib.rs
crates/workflow-core/: Cargo.toml
crates/workflow-core/src/: config.rs  constants.rs  error.rs  lib.rs  paths.rs  types.rs
crates/workflow-core/src/clients/: baserow.rs  dossier.rs  letter_service.rs  letterexpress.rs  mod.rs  nango.rs  pdf.rs  telegram.rs  zoho.rs  zoho_old.rs  zoho_test.rs
crates/workflow-core/src/services/: address_extractor.rs  letter_generator.rs  mod.rs  workflow_processor.rs
crates/workflow-core/src/workflow/: approval_queue.rs  approval_types.rs  approval_watcher.rs  mod.rs  needs_improvement_watcher.rs  orchestrator.rs  traits.rs
crates/workflow-core/tests/: test_config.rs  test_nango_zoho_integration.rs  test_real_services.rs  test_zoho_connection.rs  test_zoho_workflow.rs
crates/workflow-grpc/: Cargo.toml  build.rs
crates/workflow-grpc/src/: lib.rs
crates/workflow-server/: Cargo.toml
crates/workflow-server/src/: grpc_service.rs  main.rs
crates/workflow-types/: Cargo.toml
crates/workflow-types/src/: lib.rs
crates/zoho-generated-types/: Cargo.toml  build.rs
crates/zoho-generated-types/src/: lib.rs
proto/: approval_types.proto  common.proto  letter_service.proto  workflow_service.proto  workflow_types.proto
scripts/: run-local-watch.sh  run-local.sh  ssh-tunnel.sh
templates/: letter_template.odt
