[package]
name = "workflow-core"
version = "1.0.0"
edition = "2021"
authors = ["Lennard Development Team"]
description = "Core business logic library for workflow system"

[lib]
name = "workflow_core"
crate-type = ["rlib"]

[features]
default = []
integration = []

[dependencies]
# Generated types
zoho-generated-types = { path = "../zoho-generated-types" }
dossier-grpc-client = { path = "../dossier-grpc-client" }

# Use workspace dependencies
tokio = { workspace = true }
tonic = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
config = { workspace = true }
log = { workspace = true }

[dependencies.env_logger]
version = "0.11"

[dependencies.once_cell]
version = "1.19"

[dev-dependencies]
tempfile = "3.8"