[package]
name = "workflow-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "workflow-server"
path = "src/main.rs"

[dependencies]
workflow-core = { path = "../workflow-core" }
workflow-grpc = { path = "../workflow-grpc" }
workflow-types = { path = "../workflow-types" }

tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

env_logger = { version = "0.11", default-features = false }
log = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Command line parsing
clap = { workspace = true }

# Stream utilities
tokio-stream = { workspace = true }
futures = { workspace = true }

# File system monitoring
notify = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }