[package]
name = "zoho-generated-types"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
progenitor-client = "0.7"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
progenitor = "0.7"
prettyplease = "0.2"
syn = "2.0"
serde_json = "1.0"
openapiv3 = "2.0"
